--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,8 @@
 {
   "version": 2,
   "routes": [
-    {
-      "src": "/",
-      "dest": "/index.js"
-    }
+    { "handle": "filesystem" },
+    { "src": "/api/webhook", "dest": "index.js" },
+    { "src": "/(.*)", "dest": "index.js" }
   ]
 }
